--- a/mise.toml
+++ b/mise.toml
@@ -3,13 +3,28 @@
 [tools]
 "ubi:nushell/nushell" = { version = "latest", exe = "nu" }
 
-[tasks."test:plugin"]
-description = "Validate plugin.json"
+[tasks.test]
+description = "Run all validation tests"
+depends = ["test:claude", "test:plugin"]
+
+[tasks."test:claude"]
+description = "Validate plugin with Claude CLI"
 run = """
 #!/usr/bin/env bash
 set -e
 
 cd "$(git rev-parse --show-toplevel)"
-echo "🔍 Validating claudio plugin..."
+echo "🔍 Validating with Claude CLI..."
+claude plugin validate .
+"""
+
+[tasks."test:plugin"]
+description = "Validate plugin paths with Nushell"
+run = """
+#!/usr/bin/env bash
+set -e
+
+cd "$(git rev-parse --show-toplevel)"
+echo "🔍 Validating plugin paths..."
 nu .github/scripts/validate-plugin.nu .claude-plugin/plugin.json --verbose
 """
